src/styles/global.css
@import "tailwindcss";

@custom-variant dark (&:where(.dark, .dark *));

@font-face {
  font-family: "Lora";
  src: url("/fonts/Lora/Lora-VariableFont_wght.ttf") format("truetype");
}

@font-face {
  font-family: "Charter";
  src: url("/fonts/Charter/charter_regular.woff2") format("woff2");
  font-weight: normal;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Charter";
  src: url("/fonts/Charter/charter_bold.woff2") format("woff2");
  font-weight: bold;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "Charter";
  src: url("/fonts/Charter/charter_italic.woff2") format("woff2");
  font-weight: normal;
  font-style: italic;
  font-display: swap;
}

@font-face {
  font-family: "Charter";
  src: url("/fonts/Charter/charter_bold_italic.woff2") format("woff2");
  font-weight: bold;
  font-style: italic;
  font-display: swap;
}

section[role="main"] {
  @apply lg:max-w-3xl px-8 md:px-0 w-full;
  max-inline-size: 60ch;
}

section[role="main"] > * + * {
  @apply mb-[1.3rem];
}

section[role="main"] h1 {
  @apply my-[1.5rem];
  font-size: calc(3rem + .5vw);
  line-height: 1.2;
}

section[role="main"] h2 {
  @apply my-[1.5rem];
  font-size: calc(2rem + .5vw);
  line-height: 1.2;
}

section[role="main"] h3 {
  @apply my-[1.5rem];
  font-size: calc(2.5rem + .5vw);
  line-height: 1.2;
}

section[role="main"] li,
section[role="main"] p {
  @apply font-[Charter];
  font-size: calc(1rem + .5vw);
}

section[role="main"] li code,
section[role="main"] p code,
section[role="main"] details summary code {
  font-size: calc(1rem + .3vw);
  line-height: 0.5;
}

section[role="main"] li {
  @apply mb-[1rem];
}

section[role="main"] blockquote {
  @apply my-[1.5rem] px-4 font-medium text-black/70 dark:text-white/80;
}

section[role="main"] blockquote p {
  @apply my-0 font-[Charter];
  font-size: calc(1rem + .3vw);
}

section[role="main"] figure img {
  @apply px-0;
}

section[role="main"] figure figcaption,
section[role="main"] figure figcaption * {
  @apply text-center text-base font-[Charter];
}

section[role="main"] p.double-size {
  @apply text-2xl font-[Lora];
}

section[role="main"] p.double-size code {
  @apply text-2xl font-mono;
}

section[role="main"] pre > code {
  @apply w-[330px];
}

section[role="main"] ol {
  @apply list-decimal;
}

section[role="main"] .katex-display {
  @apply w-[330px] overflow-scroll sm:w-auto sm:overflow-visible;
}

section[role="main"] .katex-display * {
  @apply mb-0;
}

section[role="main"] .katex {
  @apply mb-0;
  font-size: calc(1rem + .5vw);
  line-height: 0.5rem;
}

section[role="main"] hgroup h1 {
  @apply mt-0;
  font-size: calc(3rem + .5vw);
  line-height: 1.2;
}

section[role="main"] div.expressive-code figure.frame.is-terminal.has-title figcaption.header span.title{
  font-family: initial;
}

section[role="main"] hgroup p {
  @apply pb-3 px-4 mb-[1.3rem] border-l-4 dark:border-red-500 border-blue-500;
  line-height: 1.5;
}

@layer base {
  ul,
  ol {
    list-style: revert; /* Restores default list-style-type (disc for ul, decimal for ol) */
    margin: revert; /* Restores default margin */
    padding: revert; /* Restores default padding */
  }
}

section[role="main"] hr {
  @apply mb-[1.5rem] border-t border-black/10 dark:border-white/10;
}

section.footnotes {
  @apply border-t border-black/10 dark:border-white/10 ;
}

section.footnotes > ol > li {
  @apply my-[1rem];
}

section[role="main"] details > p {
  @apply p-2;
}

section[role="main"] details summary {
  @apply cursor-pointer font-semibold text-xl p-2;
}

a {
  @apply dark:text-rose-400 dark:hover:text-blue-600 focus:text-fuchsia-400 hover:text-blue-600 underline dark:no-underline underline-offset-4 decoration-blue-600 decoration-2;
}

sup a {
  @apply text-rose-400 no-underline
}

section[role="main"] > div:last-child {
  margin-bottom: 1rem;
}

